fix missing border on desktop

--- a/distillery-test/css/main.css
+++ b/distillery-test/css/main.css
@@ -237,7 +237,8 @@ h2 {
 
 .section-intro {
   width: 50%;
-  padding-left: 80px; }
+  padding-left: 80px;
+  border-left: 1px solid #dbdbdb; }
 
 .section-contact {
   margin-bottom: 54px;
